fix correction text demission

--- a/obrigado.html
+++ b/obrigado.html
@@ -25,7 +25,7 @@
 
         <div class="att3">
             <p class="atributo3">Vontade de se demitir:</p>
-            <p class="up3" style="color: red">-90%</p>
+            <p class="up3" style="color: red">Foi Embora</p>
         </div>
         
     </div>
