feature: incremente img claudio

--- a/obrigado.html
+++ b/obrigado.html
@@ -30,7 +30,7 @@
         
     </div>
 
-    <img src="./pedro_money.jpeg" alt="" class="background">
+    <img src="./claude_money.jpeg" alt="" class="background">
 </body>
 </html>
 
