--- a/obrigado.html
+++ b/obrigado.html
@@ -30,7 +30,8 @@
         
     </div>
 
-    <img src="./claude_money.jpg" alt="" class="background">
+    <!-- <img src="./pedro_money.jpeg" alt="" class="background"> -->
+    <img src="./claudio_money.jpg" alt="" class="background">
 </body>
 </html>
 
